--- a/css/style.css
+++ b/css/style.css
@@ -26,6 +26,7 @@ h4 {
 h4.amiable {
   background: linear-gradient( to right, #66ee88, #118833);
 }
+
 .amiable {
   border: 1px solid #22aa44;
   box-shadow:  -1px 1px #22aa44, -2px 2px #22aa44, -3px 3px #22aa44, -4px 4px #22aa44, -5px 5px #22aa44;
@@ -33,6 +34,9 @@ h4.amiable {
 
 }
 
+h4.indifferent {
+  background: linear-gradient ( to right, #770, #aa0 );
+}
 .indifferent {
   background-color: #dddd22;
   box-shadow: -1px 1px #dddd22, -2px 2px #dddd22, -3px 3px #dddd22, -4px 4px #dddd22, -5px 5px #dddd22;
