Automatically backed up by Learn

--- a/css/style.css
+++ b/css/style.css
@@ -43,7 +43,7 @@ h4.indifferent {
 }
 
 h4.dubious{
-  background: linear-gradient(to right, #aa0, #770);
+  background: linear-gradient(to right, #700, #a00);
 }
 
 .dubious {
