--- a/css/style.css
+++ b/css/style.css
@@ -16,6 +16,11 @@ body, html {
   margin: 10px auto;
 }
 
+img {
+  border: 2px solid #333;
+  box-sizing: border-box;
+}
+
 h4 {
   width: fit-content;
   display: inline-block;
